<?xml version="1.0"?>
<package>
  <name>wifi_scan</name>
  <version>0.1.0</version>
  <description>The wifi_scan package scans for RSSI values of visible APs</description>
  
  <maintainer email="rafael.berkvens@uantwerpen.be">Rafael Berkvens</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/RafBerkvens/wifi_scan</url>
  <url type="repository">https://github.com/RafBerkvens/wifi_scan</url>
  <author email="rafael.berkvens@uantwerpen.be">Rafael Berkvens</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
